--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
             android:id="@+id/ring"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="buttonClick"
             android:text="Ring" />
 
         <TextView
