To Do List is working with a simple textview

--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -37,6 +37,13 @@
             android:onClick="buttonClick"
             android:text="Flashlight" />
 
+        <Button
+            android:id="@+id/todoListButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="openToDoList"
+            android:text="To Do List" />
+
         <TextView
             android:id="@+id/text"
             android:layout_width="wrap_content"
