--- a/wear/src/main/res/layout/activity_main.xml
+++ b/wear/src/main/res/layout/activity_main.xml
@@ -9,44 +9,50 @@
     tools:context=".MainActivity"
     tools:deviceIds="wear">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-        <!--android:boxedEdges="all">-->
+        android:layout_height="match_parent">
 
-        <Button
-            android:id="@+id/talkClick"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="buttonClick"
-            android:text="Vibrate" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+            <!--android:boxedEdges="all">-->
 
-        <Button
-            android:id="@+id/ring"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="buttonClick"
-            android:text="Ring" />
+            <Button
+                android:id="@+id/talkClick"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="buttonClick"
+                android:text="Vibrate" />
 
-        <Button
-            android:id="@+id/flashlightButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="buttonClick"
-            android:text="Flashlight" />
+            <Button
+                android:id="@+id/ring"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="buttonClick"
+                android:text="Ring" />
 
-        <Button
-            android:id="@+id/todoListButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:onClick="openToDoList"
-            android:text="To Do List" />
+            <Button
+                android:id="@+id/flashlightButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="buttonClick"
+                android:text="Flashlight" />
 
-        <TextView
-            android:id="@+id/text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+            <Button
+                android:id="@+id/todoListButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:onClick="openToDoList"
+                android:text="To Do List" />
+
+            <TextView
+                android:id="@+id/text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.wear.widget.BoxInsetLayout>
