--- a/mobile/src/main/res/layout/todolist_layout.xml
+++ b/mobile/src/main/res/layout/todolist_layout.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,11 +17,11 @@
             <TextView
                 android:id="@+id/todoListView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center|clip_vertical"
+                android:layout_height="wrap_content"
+                android:gravity="center"
                 android:text="TextView"
-                android:textSize="18sp" />
+                android:textSize="30sp" />
         </LinearLayout>
     </ScrollView>
-
 </androidx.constraintlayout.widget.ConstraintLayout>
+
